--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 absl-py==0.12.0
+asn1crypto==1.4.0
 astunparse==1.6.3
+asyncpg==0.22.0
 cachetools==4.2.1
 certifi==2020.12.5
 chardet==4.0.0
@@ -15,6 +17,8 @@ greenlet==1.0.0
 grpcio==1.32.0
 gunicorn==20.0.4
 h5py==2.10.0
+ibm-db==3.0.3
+ibm-db-sa==0.3.6
 idna==2.10
 importlib-metadata==3.7.3
 itsdangerous==1.1.0
@@ -27,18 +31,28 @@ nltk==3.5
 numpy==1.19.5
 oauthlib==3.1.0
 opt-einsum==3.3.0
+pg8000==1.18.0
 Pillow==8.1.2
+postgres==3.0.0
 protobuf==3.15.6
+psycopg2==2.8.6
+psycopg2-binary==2.8.6
+psycopg2-pool==1.1
+py-postgresql==1.2.2
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+PyGreSQL==5.2.2
 PyJWT==1.7.1
 pytz==2021.1
+redshift-sqlalchemy==0.2
 regex==2021.3.17
 requests==2.25.1
 requests-oauthlib==1.3.0
 rsa==4.7.2
+scramp==1.2.2
 six==1.15.0
-SQLAlchemy==1.4.2
+SQLAlchemy==1.3.0
+sqlparse==0.4.1
 tensorboard==2.4.1
 tensorboard-plugin-wit==1.8.0
 tensorflow==2.4.1
